Fix long fighter name overflow

--- a/apps/ui/src/components/betListWidget/BetListWidget.scss
+++ b/apps/ui/src/components/betListWidget/BetListWidget.scss
@@ -20,6 +20,7 @@
     .fighter-name {
       font-weight: bold;
       font-size: 1.25rem;
+      word-break: break-all;
     }
 
     .bet-total {
